--- a/templates/game/panes/game_recap.html.twig
+++ b/templates/game/panes/game_recap.html.twig
@@ -1,4 +1,4 @@
-{% import 'WCPC2K18Bundle:Base:macros.html.twig' as wcpc %}
+{% import 'macro/macros.html.twig' as wcpc %}
  
 <div class="card mt-3">
     <div class="card-header">
