--- a/templates/game/game.html.twig
+++ b/templates/game/game.html.twig
@@ -1,4 +1,4 @@
-{% extends "WCPC2K18Bundle:Base:layout.html.twig" %}
+{% extends "layout.html.twig" %}
 
 {% block content %}
         <div class="row">
