--- a/templates/game/panes/game_trends.html.twig
+++ b/templates/game/panes/game_trends.html.twig
@@ -1,4 +1,4 @@
-{% import 'WCPC2K18Bundle:Base:macros.html.twig' as wcpc %}
+{% import 'macro/macros.html.twig' as wcpc %}
 
 <div class="card mt-3">
     <div class="card-header">
@@ -10,7 +10,7 @@
         {% else %}
             <div class="alert alert-warning">Le nombre de pronostics saisis n'est pour l'instant pas suffisant pour dégager une tendance. 
                 La tendance apparaîtra dès que {{predictionPoolMinSize}} joueurs auront pronositiqué un score (il manque encore 
-                {{ predictionPoolMinSize - (predictions | length) }}). 
+                {{ predictionPoolMinSize - (predictions | length) }} pronostic(s)).
            </div>
         {% endif %}
     </div>
