--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,11 +1,46 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="{{ path('ecpc_home') }}">WCPC2K18</a>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="{{ path('ecpc_home') }}">ECPC2K21</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="{{ path('ecpc_users') }}">Participants</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="#"></a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+      <form class="d-flex">
+        <a href="{{ path('app_logout') }}"><button class="btn btn-outline-warning" type="button">Déconnexion</button></a>
+      </form>
+    </div>
+  </div>
+</nav>
+
+{#
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="{{ path('ecpc_home') }}">ECPC2K21</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    {#
+
+
     <ul class="navbar-nav mr-auto">
 
       <li class="nav-item active">
@@ -24,10 +59,11 @@
         <a class="nav-link" href="{{ path('ecpc2k18_rules') }}">Règlement</a>
       </li>
     </ul>
-      #}
+
     <form class="form-inline">
         <a href="{{ path('app_logout') }}"><button class="btn btn-outline-warning" type="button">Déconnexion</button></a>
     </form>
     
   </div>
-</nav>
+
+</nav>      #}
