--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -37,15 +37,15 @@
                             >
 
                             <div class="form-group">
-                                <label for="inputEmail">Email</label>
-                                <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+                                <label for="inputEmail">Nom d'utilisateur</label>
+                                <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" required autofocus>
                             </div>
                             <div class="form-group">
                                 <label for="inputPassword">Password</label>
                                 <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
                             </div>
                     </div>
-                    <div class="card-footer">
+                    <div class="card-footer text-end">
                         <input type="submit" class="btn btn-primary btn-lg text-right" id="_submit" name="_submit" value="Connexion" />
                     </div>
                     </form>
