--- a/templates/game/panes/game_trends.html.twig
+++ b/templates/game/panes/game_trends.html.twig
@@ -6,9 +6,9 @@
     </div>
     <div class="card-body">
         {% if predictions | length >= predictionPoolMinSize %}
-            <canvas id="trendsChart"></canvas>
+            {{ wcpc.comingNextAlert() }}
         {% else %}
-            <div class="alert alert-warning">Le nombre de pronostics saisis n'est pour l'instant pas suffisant pour dégager une tendance. 
+            <div class="alert alert-warning">Le nombre de pronostics saisis n'est pour l'instant pas suffisant pour dégager une tendance.
                 La tendance apparaîtra dès que {{predictionPoolMinSize}} joueurs auront pronositiqué un score (il manque encore 
                 {{ predictionPoolMinSize - (predictions | length) }} pronostic(s)).
            </div>
