--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col main-title-container">
                 <h1 class="main-title text-center">ECPC2K21</h1>
-                <h2 class="main-subtitle text-center">(European Cup Prediction Contest 2021)</h2>
+                <h2 class="main-subtitle text-center" style="margin-bottom: 150px">(European Cup Prediction Contest 2021)</h2>
             </div>
         </div>
         <div class="row">
@@ -37,13 +37,19 @@
                             >
 
                             <div class="form-group">
-                                <label for="inputEmail">Nom d'utilisateur</label>
+                                <label for="inputUsername">Nom d'utilisateur</label>
                                 <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" required autofocus>
                             </div>
                             <div class="form-group">
                                 <label for="inputPassword">Password</label>
                                 <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
                             </div>
+                        <div class="form-check">
+                            <input class="form-check-input" name= "_remember_me" type="checkbox" value="" id="remember_me" checked>
+                            <label class="form-check-label" for="remember_me">
+                                Se souvenir de moi
+                            </label>
+                        </div>
                     </div>
                     <div class="card-footer text-end">
                         <input type="submit" class="btn btn-primary btn-lg text-right" id="_submit" name="_submit" value="Connexion" />
