--- a/templates/game/panes/game_trends.html.twig
+++ b/templates/game/panes/game_trends.html.twig
@@ -6,7 +6,7 @@
     </div>
     <div class="card-body">
         {% if predictions | length >= predictionPoolMinSize %}
-            {{ wcpc.comingNextAlert() }}
+            <canvas id="trendsChart" data-chart="{{ trendsData }}"></canvas>
         {% else %}
             <div class="alert alert-warning">Le nombre de pronostics saisis n'est pour l'instant pas suffisant pour dégager une tendance.
                 La tendance apparaîtra dès que {{predictionPoolMinSize}} joueurs auront pronositiqué un score (il manque encore 
