--- a/templates/home/panes/home_last_played_games_pane.html.twig
+++ b/templates/home/panes/home_last_played_games_pane.html.twig
@@ -1,6 +1,6 @@
 <div class="card mt-3">
     <div class="card-header">
-        <i class="far fa-calendar"></i> Derniers résultats <span class="badge badge-light">{{ lastGames | length }}</span>
+        <i class="far fa-calendar"></i> Derniers résultats <span class="badge bg-yellow">{{ lastGames | length }}</span>
     </div>
     <div class="card-body">
         {% if lastGames | length > 0 %}
