--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -12,6 +12,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ path('ecpc_games') }}">Rencontres</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ path('ecpc_leaderboards') }}">Classements</a>
+        </li>
       </ul>
       <form class="d-flex">
         <a href="{{ path('app_logout') }}"><button class="btn btn-outline-warning" type="button">Déconnexion</button></a>
