--- a/templates/home/panes/home_next_games_pane.html.twig
+++ b/templates/home/panes/home_next_games_pane.html.twig
@@ -1,6 +1,6 @@
 <div class="card mt-3">
     <div class="card-header">
-        <i class="far fa-calendar"></i> Prochaines rencontres <span class="badge badge-light">{{ nextGames | length }}</span>
+        <i class="far fa-calendar"></i> Prochaines rencontres <span class="badge bg-yellow">{{ nextGames | length }}</span>
     </div>
     <div class="card-body next-games-panel-body">
         {% include 'game/games_item_list.html.twig' with { 'games' : nextGames} %}
