--- a/templates/leaderboard/leaderboard.html.twig
+++ b/templates/leaderboard/leaderboard.html.twig
@@ -1,33 +1,34 @@
-{% extends "WCPC2K18Bundle:Base:layout.html.twig" %}
+{% extends "layout.html.twig" %}
 
-{% import 'WCPC2K18Bundle:Base:macros.html.twig' as wcpc %}
+{% import 'macro/macros.html.twig' as wcpc %}
 
 
 {% block content %}
     <div class="col-lg-12">
       <div class="card mt-3">
             <div class="card-header">
-                <i class="far fa-calendar"></i> Classements</span>
+                <i class="far fa-calendar"></i> Classements
             </div>
             <div class="card-body">
-                
-               <ul id="lb-tabs" role="tablist" class="nav nav-tabs">
-                  <li class="nav-item">
-                    <a class="nav-link active" id="general-tab" data-toggle="tab" href="#general">Général</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" id="team-tab" data-toggle="tab" href="#team">Classement par équipe</a>
-                  </li>
+
+                <ul class="nav nav-tabs" id="myTab" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link active" id="general-tab" data-bs-toggle="tab" data-bs-target="#general" type="button" role="tab" aria-controls="home" aria-selected="true">Général individuel</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="team-tab" data-bs-toggle="tab" data-bs-target="#team" type="button" role="tab" aria-controls="profile" aria-selected="false">Classement par service</button>
+                    </li>
                 </ul>
-                <div class="tab-content">
-                    <div class="tab-pane fade show active mt-3" id="general" role="tabpanel" aria-labelledby="general-tab">
-                        {% include 'WCPC2K18Bundle:Leaderboard/Leaderboard:leaderboard_general.html.twig' %}
+                <div class="tab-content" id="myTabContent">
+                    <div class="tab-pane fade show active" id="general" role="tabpanel" aria-labelledby="home-tab">
+                        {% include 'leaderboard/panes/leaderboard_general_full.html.twig' %}
                     </div>
-                    <div class="tab-pane fade mt-3" id="team" role="tabpanel" aria-labelledby="team-tab">
-                        {% include 'WCPC2K18Bundle:Leaderboard/Leaderboard:leaderboard_crew.html.twig' %}
+                    <div class="tab-pane fade" id="team" role="tabpanel" aria-labelledby="profile-tab">
+                        {{ wcpc.comingNextAlert() }}
+                        {#  {% include 'leaderboard/panes/leaderboard_crew.html.twig' %} #}
                     </div>
                 </div>
             </div>
-        </div>
+      </div>
     </div>
 {% endblock content %}
