--- a/templates/leaderboard/panes/leaderboard_general.html.twig
+++ b/templates/leaderboard/panes/leaderboard_general.html.twig
@@ -3,7 +3,7 @@
 
 <div class="card mt-3">
     <div class="card-header">
-        <i class="far fa-calendar"></i> Classement général individuel
+        <i class="far fa-calendar"></i> Votre classement individuel
     </div>
     <div class="card-body">
         {% if leaderboard | length > 0 %}
@@ -20,21 +20,26 @@
                 {% set previousPoints = 0 %}
                 
                 {% for lbitem in leaderboard %}
+
+                    {% if previousPoints == lbitem.points %}
+                        {% set rankDisplay = currPos %}
+                    {% else %}
+                        {% set currPos = loop.index %}
+                        {% set rankDisplay = loop.index %}
+                    {% endif %}
+
+                    {% if loop.index >= lbStartPos and loop.index <= lbEndPos %}
                     <tr{% if lbitem.user.id == app.user.id %} class="leaderboard-connected-user"{% endif %}>
-                        <td>
-                            {% if previousPoints == lbitem.points %}
-                                &nbsp;
-                            {% else %}
-                                {{ loop.index }}
-                            {% endif %}
-                        </td>
+                        <td> {{ rankDisplay }}</td>
                         <td><a href="{{ path('ecpc_user', {'userId' : lbitem.user.id}) }}">{{ wcpc.username(lbitem.user) }}</a></td>
                         <td>{{ lbitem.points }}</td>
                     </tr>
                     {% set previousPoints = lbitem.points %}
+                    {% endif %}
                 {% endfor %}
             </tbody>
         </table>
+            <a href="{{ path('ecpc_leaderboards') }}" class="link link-dark">Voir le classement complet</a>
         {% else %}
             <div class="alert alert-warning text-justify">Le classement n'est pas disponible pour l'instant. Il apparaîtra dès qu'une rencontre aura été jouée</div>
         {% endif %}
