--- a/templates/user/users_list.html.twig
+++ b/templates/user/users_list.html.twig
@@ -6,7 +6,7 @@
     <div class="col-lg-12">
         <div class="card mt-3">
             <div class="card-header">
-                <i class="far fa-calendar"></i> Utilisateurs enregistrés <span class="badge badge-light">{{ users | length }}</span>
+                <i class="far fa-calendar"></i> Utilisateurs enregistrés <span class="badge bg-yellow">{{ users | length }}</span>
             </div>
             <div class="card-body">
                 
