--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -15,6 +15,8 @@
         </div>
         <div class="col-lg-4">
            {% include 'leaderboard/panes/leaderboard_general.html.twig' %}
+            {% include 'leaderboard/panes/leaderboard_crew.html.twig' %}
+
         </div>
     </div>
 {% endblock content %}
